# dataStructures-and-algorithms

./: .gitignore  AVL_TREE.c  AVL_TREE.h  ArrayList.c  ArrayList.h  CMakeLists.txt  Depth-First-Search.c  Depth-First-Search.h  Heap.c  Heap.h  LinkedList.c  LinkedList.h  Queue.c  Queue.h  STACK.c  STACK.h  library.h  main.c
